--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+body{
+    font-family: 'Roboto Mono', Roboto, sans-serif;
+    padding: 20px;
+}
+
+
 .skip a{
     position:absolute;
     top:-40px;
@@ -12,48 +18,231 @@
 }
 
 nav{
-    background-color:orange;
+    
+    /*background-image: url("../images/orange_building_courtyard.jpeg")*/
     color:black;
     padding:15px;
 }
+
 nav a{
     font-family:Garamond, 'Times New Roman';
     font-size:32px;
     color:white;
+    background-color: brown;
+}
+
+nav a:hover, nav a:active{
+    color:white;
+    background-color: lightcoral;
+}
+
+body{
+    display:grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 150px 1fr auto 150px;
+    row-gap: 10px;
+}
+
+header{
+    background-color: brown;
+    grid-row: 1/2;
+}
+
+main{
+    grid-row:2/3;
+    background-image: url("../images/modern_red_stairway_sky.jpeg");
+    background-size: cover;
+}
+
+
+aside{
+    background-color: lightcoral;
+    padding: 50px;
+    grid-row: 3/4
+    /*grid-row: 3/4;*/
+}
+
+footer{
+    background-color: brown;
+    grid-row:4/5;
+}
+
+i{
+    font-weight: bold;
+    color: white;
+    background-color: lightcoral;
+    padding: 30px;
+}
+
+img{
+    margin:15px;
+    width:330px;
+    height: 200px;
+    border:5px solid brown;
+    padding:10px;
+    margin: 15px auto;
+
+}
+
+/*@keyframes fade-In{
+    30%{opacity: 0.3;}
+    100%{opacity: 1;}
+    from {border: 5px solid blue;}
+    to {border: 5px solid brown;}
+}*/
+
+img:hover{
+    background:white;
+    border:5px solid lightcoral;
+    margin:15px auto;
+    padding:10px;
+    width: 330px;
+    height: 200px;
+    justify-content: center;
+    align-content: center;
+
+}
+
+@keyframes color-change{
+    50%{opacity: 0.5;}
+    100%{opacity: 1;}
+    from {border:5px solid brown;}
+    to {border: 5px solid lightcoral}
 }
 
 p{
     font-family:Garamond,'Roboto';
     font-size:18px;
-    color:black;
+    color:white;
     padding:20px;
+}
+
+#p1bleh, #p2, #p3{
+    color: white;
+    background-color: brown;
+    font-weight: bold;
+    justify-content: center;
 }
 
 h1{
     font-family:Garamond,'Roboto';
     font-size:24px;
-    color:black;
+    color:white;
     padding:25px;
+    text-align: center;
 }
+
 
 figcaption{
     font-family:Garamond,'Roboto';
     font-size:18px;
-    color:black;
-    padding:20px;
+    color:white;
+    background-color:brown;
+    padding:10px;
+    width: 330px;
+    height: 75px;
+    margin: 15px auto ;
+    justify-content: center;
+    align-content: center;
+    transition: height 3s;
+
 }
 
-img{
+figcaption:hover{
+    height: 150px;
+}
+
+section{
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+    justify-content: center;
+    justify-items: center;
+
+}
+/*#im1, #im2, #im3, #im4, #im5, #im6, #im7, #im8{
+    justify-content: center;
+}*/
+/*img{
     margin:15px;
     width:450px;
     border:5px solid orange;
     padding:10px;
-}
+}*/
 
-img:hover{
-    background:white;
-    border:5px solid lightcoral;
-    margin:15px;
-    padding:10px;
-    width:450px;
-}
+
+
+@media all and (min-width: 700px){
+    body{
+        display:grid;
+        grid-template-columns:1fr 1fr 1fr;
+        grid-template-rows: 150px 1fr 150px;
+        row-gap: 10px;
+       
+    }
+    
+    header{
+       
+        grid-row:1/2;
+        grid-column: 1/4;
+    }
+    
+    main{
+        background-image: url("../images/modern_red_stairway_sky.jpeg");
+        background-size: cover;
+        justify-content: center;
+        grid-row:2/3;
+        grid-column: 1/4;
+    }
+
+    h1{
+        text-align: left;
+        background-color: lightcoral;
+    }
+    img{
+        margin: 15px 50px;
+    }
+
+    img:hover{
+        margin: 15px 50px;
+    }
+
+    #p1bleh, #p2, #p3{
+        color: white;
+        background-color: brown;
+        font-weight: bold;
+        height: auto;
+        width: 300px;
+        align-content: end;
+       
+    }
+
+    section{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-items: center;
+        align-items: center;
+    
+    }
+
+    aside{
+        background-color: lightcoral;
+        grid-row: 2/3;
+        grid-column: 3/4;
+    }
+    
+    footer{
+        background-color: brown;
+        grid-row:3/4;
+        grid-column: 1/4;
+    }
+    
+  }
+
+@media screen and (prefers-reduced-motion: reduce){
+    #logo{
+      animation: none;
+    }
+  }
