--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@ body{
 }
 
 nav{
-    
     /*background-image: url("../images/orange_building_courtyard.jpeg")*/
     color:black;
     padding:15px;
@@ -86,7 +85,6 @@ img{
     border:5px solid brown;
     padding:10px;
     margin: 15px auto;
-
 }
 
 /*@keyframes fade-In{
@@ -105,7 +103,7 @@ img:hover{
     height: 200px;
     justify-content: center;
     align-content: center;
-
+    animation: color-change 4s;
 }
 
 @keyframes color-change{
