--- a/css/style.css
+++ b/css/style.css
@@ -81,13 +81,13 @@ button{
     background-color: lightcoral;
     height: 50px;
     width: 50px;
-    align-content: center;
+
 }
 aside{
     background-color: lightcoral;
     color: black;
     padding: 50px;
-    grid-row: 3/4
+    grid-row: 3/4;
     /*grid-row: 3/4;*/
 }
 
@@ -145,7 +145,6 @@ img:hover{
 }
 
 p{
-    font-family:Garamond,'Roboto';
     font-size:18px;
     color:white;
     padding:20px;
@@ -210,9 +209,9 @@ section{
 
 @media all and (min-width: 700px){/*tablet*/
 
-    header{
+    /*header{
         grid-row: 1/2;
-    }
+    }*/
 
     aside{
         grid-row: 2/3;
@@ -225,12 +224,12 @@ section{
         grid-row: 3/4;
     }
 
-    footer{
+    /*footer{
         grid-row: 4/5;
-    }
+    }*/
 
     footer{
-        display: grid;
+        /*display: grid;*/
         grid-template-columns: 25px 1fr;
     }
 
@@ -242,8 +241,8 @@ section{
         display: flex;
         flex-direction: row-reverse;
         flex-wrap: wrap;
-        justify-items: center;
-        align-items: center;
+        /*justify-items: center;
+        align-items: center;*/
     
     }
 }
@@ -253,13 +252,13 @@ section{
         display:grid;
         grid-template-columns:1fr 1fr 1fr;
         grid-template-rows: 150px 1fr 150px;
-        row-gap: 10px;
+        /*row-gap: 10px;*/
        
     }
     
     header{
        
-        grid-row:1/2;
+        /*grid-row:1/2;*/
         grid-column: 1/4;
     }
 
@@ -271,8 +270,8 @@ section{
   
     
     main{
-        background-image: url("../images/modern_red_stairway_sky.jpeg");
-        background-size: cover;
+        /*background-image: url("../images/modern_red_stairway_sky.jpeg");
+        background-size: cover;*/
         justify-content: center;
         grid-row:2/3;
         grid-column: 1/4;
@@ -291,9 +290,9 @@ section{
     }
 
     #p1bleh, #p2, #p3{
-        color: white;
+        /*color: white;
         background-color: brown;
-        font-weight: bold;
+        font-weight: bold;*/
         height: auto;
         width: 300px;
         align-content: end;
@@ -304,19 +303,19 @@ section{
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        justify-items: center;
-        align-items: center;
+        /*justify-items: center;
+        align-items: center;*/
     
     }
 
     aside{
-        background-color: lightcoral;
+        /*background-color: lightcoral;*/
         grid-row: 2/3;
         grid-column: 3/4;
     }
     
     footer{
-        background-color: brown;
+        /*background-color: brown;*/
         grid-row:3/4;
         grid-column: 1/4;
     }
